@@ -28,7 +28,7 @@
 				<include>**</include>
 			</includes>
 			<directory>target/src</directory>
-			<outputDirectory>/</outputDirectory>
+			<outputDirectory></outputDirectory>
 		</fileSet>
 		<fileSet>
 			<includes>
@@ -37,7 +37,7 @@
 				<include>RELEASE-NOTES.txt</include>
 			</includes>
 			<directory>..</directory>
-			<outputDirectory>/</outputDirectory>
+			<outputDirectory></outputDirectory>
 		</fileSet>
 	</fileSets>
 </assembly>
