@@ -17,6 +17,8 @@ Release Notes - Juneau - Version 6.0.1
     * [JUNEAU-17] - Resolve various small issues pointed out during release of 6.0.0
     * [JUNEAU-19] - Fix various JSON parser edge cases
     * [JUNEAU-21] - Scrub references to IBM from code.
+    * [JUNEAU-22] - Localization bugs in CalendarSwap JUnits
+    * [JUNEAU-23] - Fix various maven build warnings.
 
 ** Improvement
     * [JUNEAU-18] - Add HtmlDocSerializer.DEFAULT field.
